sista versionen är klar

--- a/src/index.html
+++ b/src/index.html
@@ -11,22 +11,22 @@
 </head>
 <body>
     <header>
-        <div class="header-title">
+        <div class="headerTitle">
             <h1>Welcome to nature</h1>
             <h2>A journey throught time and sheep</h2>
-            <h2>To see how ...cotton ... is mage, made I mean</h2>
+            <h2 class="headerTitle__rowThree">To see how ...cotton ... is mage, made I mean</h2>
         </div>
-        <div class="scroll-btn">
+        <div class="scrollBtn">
             <a href="#about"><i class="bi bi-arrow-down-circle-fill"></i></a>
             
         </div>
     </header>
     <nav>
         <input id="toggle" type="checkbox"></input>
-        <label for="toggle" class="hamburger__icon">
-            <div class="hamburger__icon__top-bun"></div>
-            <div class="hamburger__icon__meat"></div>
-            <div class="hamburger__icon__bottom-bun"></div>
+        <label for="toggle" class="hamburgerIcon">
+            <div class="hamburgerIcon__top-bun"></div>
+            <div class="hamburgerIcon__meat"></div>
+            <div class="hamburgerIcon__bottom-bun"></div>
         </label>
         <div class="menu">
             <div class="menu__bg"></div>
@@ -98,7 +98,7 @@
                 </p>
             </div>
         </div>
-        <div class="scroll-btn">
+        <div class="scrollBtn">
             <a href="#contact"><i class="bi bi-arrow-down-circle-fill"></i></a>
             
         </div>
