assets was in wrong directory. Fixed

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
         <div class="profile">
             <span class="profile__name">Rakib</span>
             <div class="profile__img">
-                <img src="./../assets/profiles/Rakib_Square.png" alt="Rakib photo">
+                <img src="./assets/profiles/Rakib_Square.png" alt="Rakib photo">
             </div>
             <div class="profile__quote">
                 <p>
@@ -65,7 +65,7 @@
         <div class="profile">
             <span class="profile__name">Alexandra</span>
             <div class="profile__img">
-                <img src="./../assets/profiles/Alexandra_Square.png" alt="Alexandra photo">
+                <img src="./assets/profiles/Alexandra_Square.png" alt="Alexandra photo">
             </div>
             <div class="profile__quote">
                 <p>
@@ -77,7 +77,7 @@
         <div class="profile">
             <span class="profile__name">Lasse</span>
             <div class="profile__img">
-                <img src="./../assets/profiles/NoPerson_Square.png" alt="Lasse photo">
+                <img src="./assets/profiles/NoPerson_Square.png" alt="Lasse photo">
             </div>
             <div class="profile__quote">
                 <p>
@@ -89,7 +89,7 @@
         <div class="profile">
             <span class="profile__name">Sebastian</span>
             <div class="profile__img">
-                <img src="./../assets/profiles/Sebastian_Square.png" alt="Sebastian photo">
+                <img src="./assets/profiles/Sebastian_Square.png" alt="Sebastian photo">
             </div>
             <div class="profile__quote">
                 <p>
